# seminario-de-rust

./: .gitmodules  LICENSE  README.md
entregas/: Cargo.toml  actualizar_archivo_test2.json  crear_usuario_test.json  downgrade_suscription_test.json  suscripciones.json
entregas/src/: joaquin_gabriel_sanchez_e1.rs  joaquin_gabriel_sanchez_e3.rs  main.rs
entregas/src/coverage/tarpaulin/: entregas-coverage.json
entregas/src/coverage/tarpaulin/profraws/: entregas-6e784d7d55c107fc.exe_2992018000106245377_0-7816.profraw
practicas/resoluciones/: Cargo.toml  autos.json  playlist.json
practicas/resoluciones/src/: main.rs  tp1.rs  tp2.rs  tp3.rs  tp4.rs
practicas/resoluciones/src/coverage/: .rustc_info.json
practicas/resoluciones/src/coverage/tarpaulin/: practicas-coverage.json
practicas/resoluciones/src/coverage/tarpaulin/profraws/: practicas-c59f7abf53adb0fe.exe_12565776954900386158_0-15676.profraw
practicas/resoluciones/src/tp5/: ej1.rs  ej2.rs  ej3.rs  ej5.rs  file_manager.rs  mod.rs
